<resources>
    <string name="app_name">Droid IBus</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="stationTextLbl">Station</string>
    <string name="speedFieldLbl">Speed:</string>
    <string name="rpmFieldLbl">RPM:</string>
    <string name="rangeFieldLbl">Range:</string>
    <string name="locationFieldLbl">Location: </string>
    <string name="currentObcStatsLbl">Fuel Economy Stats</string>
    <string name="consumptionLbl1">Fuel Consumption 1:</string>
    <string name="consumptionLbl2">Fuel Consumption 2:</string>
    <string name="avgSpeedLbl">Avg. Speed</string>
    <string name="geo_stats_lbl">Geo Stats</string>
    <string name="geo_altitude_lbl">Altitude</string>
    <string name="geo_latlong_lbl">Lat / Long:</string>
    <string name="outdoorTempFieldLbl">Outdoor:</string>
    <string name="coolantTempFieldLbl">Coolant:</string>
    <string name="defaultText">----</string>
    <string name="playerAlbumArtistSeperator">-</string>
    <string name="vehicleStatLbl">Vehicle</string>
    <string name="temperatureStatLbl">Temps</string>
    <string name="btnRadioAMLbl">AM</string>
    <string name="btnRadioFMLbl">FM</string>
    <string name="mediaBtnDesc">Media Button</string>
    <string name="rdsIndicatorLbl">RDS</string>
    <string name="stereoIndicatorLbl">Stereo</string>
    <string name="blankLbl"></string>
    <!-- Options for the Drawer -->
    <string-array name="options_array">
        <item>Dashboard</item>
        <item>Navigation</item>
        <item>Settings</item>
    </string-array>
    <!-- Settings below are for our preferences menu -->
    <string name="settings_carSettings">Vehicle Equipment</string>
    <string name="settings_radioType">Radio Type</string>
    <string name="settings_radioType_summ">Controls which messages are parsed and used to control the radio</string>
    <string-array name="settings_radioType_options">
        <item>CD53</item>
        <item>BM53</item>
    </string-array>
    <string-array name="settings_mflMediaButton_options">
        <item>Voice Button Press</item>
        <item>Voice Button Hold</item>
        <item>Disabled</item>
    </string-array>
    <string-array name="settings_timeUnit_options">
        <item>12H</item>
        <item>24H</item>
    </string-array>
    <string-array name="settings_speedUnit_options">
        <item>KM/H</item>
        <item>MPH</item>
    </string-array>
    <string-array name="settings_distanceUnit_options">
        <item>Kilometers</item>
        <item>Miles</item>
    </string-array>
    <string-array name="settings_consumptionUnit_options">
        <item>L/100</item>
        <item>MPG</item>
        <item>KM/L</item>
    </string-array>
    <string-array name="settings_temperatureUnit_options">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="settings_timeUnit_options_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="settings_speedUnit_options_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="settings_distanceUnit_options_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="settings_consumptionUnit_options_values">
        <item>00</item>
        <item>01</item>
        <item>11</item>
    </string-array>
    <string-array name="settings_temperatureUnit_options_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="settings_mflMediaButton_options_values">
        <item>PRESS</item>
        <item>HOLD</item>
        <item>DISABLED</item>
    </string-array>
    <string name="settings_navAvailable">Display Nav Data</string>
    <string name="settings_navAvailable_summ">Enable only if your vehicle is equipped with the nav unit and it\'s DVD</string>
    <string name="settings_soneAvailable">Enable StealthOne Support</string>
    <string name="settings_soneAvailable_summ">If you have a StealthOne and you want to display it\'s data in the app, enable this</string>
    <string name="settings_personalize">Personalization</string>
    <string name="settings_changeTextColor">Change Text Color With Lights</string>
    <string name="settings_changeTextColor_summ">Changes the color of the tablet text to amber when the interior lights come on</string>
    <string name="settings_mflMediaButton">Steering wheel playback button selection</string>
    <string name="settings_mflMediaButton_summ">Changes how the tablet responds to voice button (Playback Toggle) input</string>
    <string name="settings_carValueSettings">Vehicle OBC Values</string>
    <string name="settings_date">Date</string>
    <string name="settings_date_summ">Set the vehicle date</string>
    <string name="settings_time">Time</string>
    <string name="settings_time_summ">Set the vehicle time</string>
    <string name="settings_units">Unit Types</string>
    <string name="settings_units_summ">Set the vehicle Units (eg. Metric and Imperial)</string>
    <string name="settings_datetime_sync">Sync Date/Time</string>
    <string name="settings_datetime_sync_summ">Sync the car\'s date and time with the tablet</string>
    <string name="settings_timeUnit">Time Unit</string>
    <string name="settings_timeUnit_summ">Set the date &amp; time units (eg. 24h / 12h)</string>
    <string name="settings_speedUnit">Speed Unit</string>
    <string name="settings_speedUnit_summ">Set the speed units (eg. MPH or KM/H)</string>
    <string name="settings_distanceUnit">Distance Unit</string>
    <string name="settings_distanceUnit_summ">Set the distance units (eg. Miles or Kilometers)</string>
    <string name="settings_temperatureUnit">Temperature Unit</string>
    <string name="settings_temperatureUnit_summ">Set the temperature units (eg. Fahrenheit or Celsius)</string>
    <string name="settings_consumptionUnit">Consumption Unit</string>
    <string name="settings_consumptionUnit_summ">Set the consumption units</string>
    <color name="dayColor">#BEBEBE</color>
    <color name="nightColor">#FF7E00</color>
</resources>
